Refactored out and extended advanced example in to separate file for more advanced testing of layouts, initialization and destruction within containers, modified empty text handling to allow for text wrapping at smaller field widths, added minor defensive protections to prevent superfluous javascript errors.

--- a/src/BoxSelect.css
+++ b/src/BoxSelect.css
@@ -11,18 +11,21 @@ ul.x-boxselect-list.x-boxselect-singleselect {
     white-space: nowrap;
     overflow: hidden;
 }
-.x-boxselect input {
-	border: none;
-	background: none;
-	line-height: 18px;
-	height: 20px;
-	width: 100%;
-}
 .x-boxselect-input, .x-boxselect-item {
 	display: inline-block;
 	position: relative;
 	*display:inline; /* IE7 */
 	zoom:1; /* IE */
+}
+.x-boxselect-input input, .x-boxselect-input div {
+	border: none;
+	background: none;
+	line-height: 18px !important;
+	height: 20px;
+	width: 100%;
+}
+.x-boxselect-emptyinput {
+    display: none;
 }
 .x-boxselect-stacked .x-boxselect-item {
 	display: block;
